@@ -177,8 +177,12 @@ Fixed auto scale in magmap so it works with NA and NaN situations.
 
 Fixed issue with magmap where a matrix could cahnge type to vector (when all elements were the same).
 
+Feature: added cdf scaling to magmap.
+
 TO DO:
 
 FEATURE: Add better in-plot legends.
+
+FEATURE: Create maghist
 
 
